2014-11-27  Holger Seelig  <holger.seelig@yahoo.de>

	* BrowserWindow.cpp:
	* X3DBrowserEditor.h:
	* BrowserWindow.xml:
	* AnimationEditor.xml:
	* X3DBrowserEditor.cpp:
	* OutlineDragDrop.cpp:
	* AnimationEditor.h:
	* AnimationEditor.cpp:
	* X3DAnimationEditorInterface.h:
	* X3DAnimationEditorInterface.cpp: 

2014-11-26  Holger Seelig  <holger.seelig@yahoo.de>

	* titania:
	* Makefile.am:
	* BrowserWindow.xml:
	* X3DBrowserWindow.h:
	* X3DBrowserWindow.cpp:
	* X3DBrowserWidget.cpp:
	* AnimationEditor.xml:
	* AnimationEditor.h:
	* X3DBrowserWindowInterface.h:
	* AnimationEditor.cpp:
	* X3DBrowserWindowInterface.cpp:
	* X3DAnimationEditorInterface.h:
	* X3DAnimationEditorInterface.cpp: 

2014-11-25  Holger Seelig  <holger.seelig@yahoo.de>

	* TextureCoordinateEditor.h:
	* TextureCoordinateEditor.cpp: 

2014-11-25  Holger Seelig  <holger.seelig@yahoo.de>

	* TextureCoordinateEditor.xml:
	* IcoSphere.x3dv:
	* QuadSphere.x3dv:
	* X3DTextureCoordinateEditorInterface.h:
	* X3DTextureCoordinateEditorInterface.cpp:
	* TextureCoordinateEditor.h:
	* TextureCoordinateEditor.cpp: 

2014-11-24  Holger Seelig  <holger.seelig@yahoo.de>

	* TextureCoordinateEditor.xml:
	* X3DTextureCoordinateEditorInterface.h:
	* X3DTextureCoordinateEditorInterface.cpp:
	* TextureCoordinateEditor.h:
	* TextureCoordinateEditor.cpp: 

2014-11-24  Holger Seelig  <holger.seelig@yahoo.de>

	* BrowserWindow.xml: 

2014-11-24  Holger Seelig  <holger.seelig@yahoo.de>

	* titania:
	* FaceSelection.cpp:
	* TextureCoordinateEditor.cpp: 

2014-11-24  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DColorPerVertexEditorInterface.h:
	* ColorPerVertexEditor.h:
	* X3DColorPerVertexEditorInterface.cpp:
	* ColorPerVertexEditor.cpp: 

2014-11-24  Holger Seelig  <holger.seelig@yahoo.de>

	* ColorPerVertexEditor.h:
	* ColorPerVertexEditor.cpp: 

2014-11-23  Holger Seelig  <holger.seelig@yahoo.de>

	* TextureCoordinateEditor.cpp: 

2014-11-23  Holger Seelig  <holger.seelig@yahoo.de>

	* ColorPerVertexEditor.cpp: