@@ -1,10 +1,10 @@
-#X3D V3.3 utf8 Titania V0.7.4
+#X3D V3.3 utf8 Titania V0.7.5
 
 META "comment" "World of Titania"
 META "created" "Wed, 03 Sep 2014 04:43:13 GMT"
 META "creator" "Holger Seelig"
-META "generator" "Titania V0.7.4, http://titania.create3000.de"
-META "modified" "Wed, 03 Sep 2014 04:47:51 GMT"
+META "generator" "Titania V0.7.5, http://titania.create3000.de"
+META "modified" "Thu, 27 Nov 2014 14:28:06 GMT"
 
 Background {
   skyColor 1 1 1
